--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
     "firebase": "^8.2.1",
+    "firebase-admin": "^9.4.2",
     "haversine-geolocation": "^1.5.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
