--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^12.6.0",
     "firebase": "^8.2.1",
     "firebase-admin": "^9.4.2",
+    "firebase-tools": "^9.2.1",
     "haversine-geolocation": "^1.5.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
