--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "firebase-admin": "^9.4.2",
     "firebase-tools": "^9.2.1",
     "haversine-geolocation": "^1.5.0",
+    "moment-timezone": "^0.5.32",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
